# aws-greengrass-secure-tunneling

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  coverity.json  fc_deps.json  flake.nix  gdk-build.sh  gdk-config.json  generate_coverage.sh  recipe-dev.yaml  recipe-prod.yaml  recipe.yaml
.github/workflows/: ci.yml  release-podman.yml  release.yml
docs/: BUILD.md  RunningTests.md  configuration.md  deployment.md  gdk.md  ipc-mock.md  localproxy.md  usage.md
include/: secure-tunnel.h
misc/: dictionary.txt  iwyu_mappings.yml
src/: main.c  secure-tunnel.c  subscription.c  subscriptions.h  tunnel.c  tunnel.h  tunnel_notification_parser.c  tunnel_notification_parser.h
test/: CMakeLists.txt  README.md  fc_deps.json  run_tests.sh  test_helpers.c  test_helpers.h  verify_setup.sh
test/integration/: CMakeLists.txt  test_integration_error_handling.c  test_subscription.c
test/ipc_mock/: CMakeLists.txt  ipc_mock.h  mock.c  object_compare.c
test/ipc_mock/ipc/: mock.h  packet_sequences.h
test/ipc_mock/packets/: connect_packet_sequences.c  mqtt_packet_sequences.c  packets.c  packets.h
test/ipc_mock/unity/gg_test/: test.c
test/ipc_mock/unity/gg_test/include/gg/: test.h
test/unit/: CMakeLists.txt  cmock_config.yml  test_localproxy_failure.c  test_secure_tunnel.c  test_service_name_validation.c
